kubernetes-manifests/certs/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy
  namespace: certs
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
